# java-cpp-integration

./: README.md  build.gradle.kts  settings.gradle.kts
gradle/wrapper/: gradle-wrapper.properties
jni-demo/: build.gradle.kts
jni-demo/src/main/java/com/example/: DemoApplication.java
jni-library/: CMakeLists.txt  build.gradle.kts
jni-library/src/main/cpp/: NativeLibrary.cpp
jni-library/src/main/java/com/example/: NativeLibrary.java
src/main/cpp/: CMakeLists.txt  NativeLibrary.cpp  NativeLibrary.h
src/main/java/com/example/: Main.java  NativeLibrary.java
